# hypr_dotfiles

./: .gitignore  README.md  collect.sh  install.sh
config/anyrun/: applications.ron  rink.toml  shell.ron  style.css
config/btop/: btop.conf
config/doom/: init.el
config/gtk-3.0/: settings.ini
config/gtk-4.0/: settings.ini
config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  pyprland.toml
config/hypr/scripts/: launch_bar.sh  random-wallpaper.sh  waybar_auto_hide  wf-recorder-toggle.sh
config/kitty/: kitty.conf
config/nvim/: lazy-lock.json  lazyvim.json
config/nvim/lua/plugins/: project.lua
config/qt5ct/: qt5ct.conf
config/qt6ct/: qt6ct.conf
config/rofi/: clipboard.sh  config-left.rasi  config-right.rasi  config.rasi  rofi-audio.sh  rofi-tlp.sh  tokyo-night.rasi  web-search.sh
config/vesktop/: settings.json
config/waybar/: config-bottom  config-top  launch.sh  style.css
config/waybar/scripts/: app-volume.sh  get-volume.sh  media-controls.sh  mediaplayer.py  switch-layout.sh  toggle-conservation.sh  toggle-mute.sh  toggle.sh
waybar_auto_hide/: Cargo.toml  README.md
waybar_auto_hide/src/: main.rs
