[package]
name = "waybar_auto_hide"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
libc = "0.2"
clap = { version = "4.5.54", features = ["derive"] }

[profile.release]
opt-level = 3   
lto = "fat"    
codegen-units = 1 
